# ml-dl

./: .gitignore  HW2.ipynb  pyproject.toml
.ipynb_checkpoints/: HW2-checkpoint.ipynb  ml-dl-hw2-checkpoint.ipynb
DL/HW2/: ml-dl-hw2.ipynb
DL/HW4/: DL4.ipynb  fall23_hw4_prob2_data.npy
DL/HW6/: DL.sh  VGG.py
HW2/: HW2.ipynb
HW4/: DL4.ipynb  DeepLearning_Fall2023_Homework4.ipynb
HW4/.ipynb_checkpoints/: DL4.ipynb  DeepLearning_Fall2023_Homework4-checkpoint.ipynb
HW6/: AugmentedUNet.py  DeepLearning_Fall2023_HW6.ipynb  HW6.ipynb  VGG.py  sshuya.ipynb
HW6/HW6_data/: mapping.json
computational-social-sci/: .gitignore
computational-social-sci/hw1/: .gitignore  log_odds.py  topic_models.py  word_embeddings.py
computational-social-sci/hw2/: Template.csv  Template.pkl  annotation.ipynb  annotation_second.ipynb  scrapy_ted.py  utils.py
computational-social-sci/hw3/: main.py
computational-social-sci/hw4/: LM_terms.txt  anthroscores_custom.csv  custom.csv  main.py
data-sci/: .gitignore
data-sci/hw1/: hw1-introds-sp24.html  hw1-introds-sp24.ipynb
self-supervised/: pyproject.toml
self-supervised/hw1/: main.py  model.pth  model.py
self-supervised/hw2/: gradient_descent.py  main.py  model.pth  ngram_lm.py
self-supervised/hw3/: learning_rate_0.001.pth  learning_rate_0.01.pth  learning_rate_0.015.pth  learning_rate_0.02.pth  learning_rate_0.2.pth  main.py  mlp.py
self-supervised/hw3/figures/: model_activations_GeLU.pth  model_activations_ReLU.pth  model_activations_Sigmoid.pth  model_activations_Tanh.pth  model_hidden_512 -> 512 -> 512.pth  model_hidden_512 -> 512.pth  model_hidden_512.pth  model_hidden_None.pth
self-supervised/hw4/: .gitignore  main.py  mlp_lm.py  tokenization.py
self-supervised/hw5/: sbatch.sh
self-supervised/hw5/gpt/: model.py
(+58 files in other folders)
