[tool.poetry]
name = "ml-dl"
version = "0.1.0"
description = ""
authors = ["klxu03 <beaver2025@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.17.0"
easydict = "^1.12"
gensim = "^4.3.2"
matplotlib = "^3.8.3"
nltk = "^3.8.1"
numpy = "^1.26.4"
sentence-splitter = "^1.4"
torch = "^2.2.0"
tqdm = "^4.66.2"
transformers = "^4.37.2"
ipywidgets = "^8.1.2"
ipykernel = "^6.29.2"
scrapy = "^2.11.1"
scikit-learn = "^1.4.1.post1"
nbconvert = "^7.16.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
