[tool.poetry]
name = "self-supervised"
version = "0.1.0"
description = ""
authors = ["klxu03 <beaver2025@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
easydict = "^1.11"
nltk = "^3.8.1"
gensim = "^4.3.2"
tqdm = "^4.66.1"
datasets = "^2.16.1"
numpy = "^1.26.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
