[tool.poetry]
name = "self-supervised"
version = "0.1.0"
description = ""
authors = ["klxu03 <beaver2025@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
easydict = "^1.11"
nltk = "^3.8.1"
gensim = "^4.3.2"
tqdm = "^4.66.1"
datasets = "^2.16.1"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
sentence-splitter = "^1.4"
transformers = "^4.37.2"
ipykernel = "^6.29.2"
notebook = "^7.0.7"
tabulate = "^0.9.0"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
